tests/fixtures/syntax/valid/workspace_path_literal_steps.repor
case "workspace path literals across path-taking constructs" {
  write <"out.txt"> ```
    hello
    ```

  assert {
    file <"out.txt"> exists
    file <"out.txt"> contains "hello"
    dir <"logs"> exists
  }
}
