tests/fixtures/syntax/invalid/fixture_reference_dot_segment_leading_current_path.repor
case "fixture reference path must not start with a leading . segment" {
  $ true
  assert {
    file <"out.txt"> contents_equals @"./escape.txt"
  }
}
